manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
  namespace: frontend
  labels:
    app: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: gcr.io/mavq-gdg-devfest/gdg-angular-app:latest
        ports:
        - containerPort: 5000
